【關於e_stud_import】
=================================================
 在台南市已建有學籍系統，但要在學校使用，卻無法直接連結。而使用 SFS3 或 X 學務，卻會造成維護兩套學籍系統的困擾。
 這個學生名冊，直接匯入台南市學籍中已建制的匯出健康系統 XML 格式。每次學生更動，只要再重匯一次就可以最新的學生名冊。

 有了學生資料才能再配合相關模組(如收費系統等)。

【環境需求】
=================================================
1.PHP 5 以上
2.需要 Tad Tools 工具包 2.01 版

【安裝方法】
=================================================
1.將新模組解壓，把目錄上傳到 modules 下。
2.需搭配 Tad Tools 工具包2.01 以上，詳細安裝方法請按此連結。
3.進入後台「模組→系統」進行模組安裝。

【使用方法】
=================================================
1.先到後台學生名冊，上傳台南市學籍中已建制的匯出健康系統 XML 格式，會把舊資料全部清除後重建。
2.級任設定前，要先在偏好中設定要取得教師的所在群組，否則無法列出教師名單。
3.級任設定方法為，點選雙邊進行設定班級導師，選擇時呈黃色，設定完成為黑色，教師姓名會隱藏。垃圾桶圖示會還原重新設定。
4.職稱設定方法相同，在偏好修改學校中使用的職稱。指定時會配合群組代號，加入所屬群組權限。

【更新記錄】
 =================================================
 2.0版
     支援 php7
     
 1.99版
    修正範例 EXCEL 連結檔名錯誤

 1.98版，
    在單位名冊首頁中，增加偏好設定是否顯示 EMAIL 。校內群組人員登入時，會全部顯示。

 1.95版，增加編好設定，在群組設定頁中，要出現的群組名稱。
    提醒：如果你的 XOOPS 群組設定上，教職員群組ID放在(如各處室)後方式，在離職後，需再檢查使用者有無其他群組權限。

 1.94版，修正一些頁面無法呈現的錯誤。
 1.93版，前台可支援 bootstrap 3 ，但後台僅支援 bootstrap 2 。
    修正職稱設定切換校內人員後無法刪除的錯誤。
    修正匯入 XML 缺監護人資料的問題。
    家長選單加框線。
 1.92版，匯出改 excel2007 格式、匯出網頁樣式加入*同學
 1.9版，加入使用班級名稱設定(級任設定頁中指定)
 1.86版，修正EXCEL匯入空學生資料。
 1.85版，加入學生姓名多人搜尋、統計資料
 1.84版，加入家長代表名冊。偏好中可以設定提醒文字。
 1.83版，加入搜尋學生姓名、班級名冊列表功能。
 1.82版，修正級任設定被覆蓋時，原教師指定未清除的錯誤。加班級總表。
 1.81版，135級任升級。
 1.8版，級任設定已使用拖曳方式指定。
 1.7版，加入拖曳方式指定群組。
 1.61版，調整級任設定、職稱設定格式。
 1.6版，資料表修改，e_classteacher 加入職稱等欄位。
 1.5版，加入統計記錄，調整畫面。
 1.4版，修正匯入時學年度錯誤。
 1.3版，加入學生名冊匯出成網頁連結，提供如學生網頁連結畫面。
 1.2版，加入教職員設定，提供教職員列表。教師可以切換呈現非本校員工，設班級、職稱會轉為本校員工。離職員工，會移除校內群組。
    把學生名冊顯示移到後台。模組名稱改為：單位名冊。
 1.1版，加入清除級任鍵。
 1.0版，加入匯入 EXCEL 功能。
 0.9版，加入 XML 範例檔。
 0.8版，釋出。

 【補充說明】
=================================================
格式範例檔，本程式資料庫只存放 ：身份證字號、姓名、性別、入學年、班級、監護人、座號、生日、代號。
欄位 stud_id ， tn_id 內容相同，存放 "代號" 資料。